# FraudLensGov

./: .env.example  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
audit_ui/: apps.py  urls.py  views.py
audit_ui/static/audit_ui/: app.css  app.js
audit_ui/templates/audit_ui/: alert_detail.html  dashboard.html
audit_ui/templates/audit_ui/partials/: alerts_panel.html  categories_panel.html  clusters_panel.html  guidance_panel.html  jobs_panel.html  knn_panel.html  pagination.html  pipeline_panel.html  quality_panel.html  runs_panel.html
docs/: DESIGN_SYSTEM.md  IMPLEMENTATION_PLAN.md
fraud_lens_gov/: __init__.py  __main__.py  anomalies.py  candidate_index.py  clustering.py  exporting.py  genai.py  item_categorization.py  item_quality.py  models.py  normalization.py  rag.py  sample_data.py  semantic_similarity.py  storage.py  unit_normalization.py  webapp.py
fraud_lens_gov/sources/: compras_gov.py  google_search.py  http.py  pncp.py
fraudlensgov_site/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_anomalies.py  test_clustering.py  test_compras_enrichment.py  test_django_dashboard.py  test_item_categorization.py  test_item_quality.py  test_rag.py  test_storage.py  test_unit_normalization.py
