[project]
name = "fraud-lens-gov"
version = "0.1.0"
description = "Public procurement fraud-risk lens with auditable anomaly detection and AI-assisted explanations."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "FraudLensGov contributors" }
]
dependencies = []

[project.scripts]
fraud-lens-gov = "fraud_lens_gov.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
